@@ -1,5 +1,11 @@
 2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	bug #21922: ATmega163 still not working in version 5.5
+	* avrdude.conf.in (atmega163): fill in stk500v2 parameters, correct
+	some flash programming parameters as well.
+
+2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	bug #22206: avrdude: ser_setspeed(): tcsetattr() failed
 	* ser_posix.c (ser_setspeed): Don't pass TCSAFLUSH to tcsetattr() as
 	it apparently fails to work on Solaris.  After reading the
